tests/baselines/reference/mergedEnumDeclarationCodeGen.errors.txt
mergedEnumDeclarationCodeGen.ts(1,6): error TS2567: Enum declarations can only merge with namespace declarations.
mergedEnumDeclarationCodeGen.ts(5,6): error TS2567: Enum declarations can only merge with namespace declarations.
mergedEnumDeclarationCodeGen.ts(6,9): error TS2304: Cannot find name 'a'.


==== mergedEnumDeclarationCodeGen.ts (3 errors) ====
    enum E {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
        a,
        b = a
    }
    enum E {
         ~
!!! error TS2567: Enum declarations can only merge with namespace declarations.
        c = a
            ~
!!! error TS2304: Cannot find name 'a'.
    }